inventree-app.yml
---
apiVersion: v1
kind: Service
metadata:
  name: inventree-app
  namespace: inventree
  labels:
    app: inventree-app
spec:
  ports:
    - name: server
      port: 8000
      targetPort: 8000
    - name: proxy
      port: 80
      targetPort: 80
  selector:
    app: inventree-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventree-app
  namespace: inventree
  labels:
    app: inventree-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventree-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: inventree-app
    spec:
      restartPolicy: Always
      containers:
        - name: inventree-server
          image: docker.io/inventree/inventree:stable
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: inventree-data         
              mountPath: /home/inventree/data
            - name: inventree-data
              mountPath: /var/www/static
              subPath: static
          lifecycle:
            postStart:
              exec:
                 command:
                   - '/bin/sh'
                   - '-c'
                   - 'cp -rf /home/inventree/src/backend/InvenTree/InvenTree/static /home/inventree/data && cp -rf /home/inventree/src/backend/InvenTree/InvenTree/static_i18n/i18n /var/www/static/i18n && cp -rf /root/.local/lib/python3.11/site-packages/django/contrib/admin/static/admin /var/www/static/admin'
        - name: inventree-proxy
          image: docker.io/nginx:stable
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.prod.conf
              readOnly: true
            - name: inventree-data                  
              mountPath: /var/www        
      volumes:
        - name: config
          configMap:
            name: inventree-proxy
        - name: inventree-data
          persistentVolumeClaim:
            claimName: inventree-data
...
