inventree-cache.yml
---
apiVersion: v1
kind: Service
metadata:
  name: inventree-cache
  namespace: inventree
  labels:
    app: inventree-cache
spec:
  selector:
    app: inventree-cache
  ports:
    - name: 'redis'
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: inventree-cache
  namespace: inventree
  labels:
    app: inventree-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventree-cache  
  template:
    metadata:      
      labels:
        app: inventree-cache
    spec:
      containers:
        - image: docker.io/redis:7.0
          name: inventree-cache
          ports:
            - containerPort: 6379
...
