inventree-db.yml
---
apiVersion: v1
kind: Service
metadata:
  name: inventree-db
  namespace: inventree
  labels:
    app: inventree-db
spec:
  ports:
    - name: 5432-5432
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: inventree-db
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventree-db
  namespace: inventree
  labels:
    app: inventree-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventree-db
  template:
    metadata:
      labels:
        app: inventree-db
    spec:
      containers:
        - image: docker.io/postgres:13
          name: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: inventree-db
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: inventree-db
          persistentVolumeClaim:
            claimName: inventree-db
...
