inventree-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventree  
  namespace: inventree  
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: inventree.k8s.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:            
                name: inventree-app
                port:
                  number: 80
  tls:
    - hosts: [inventree.k8s.localhost]
      secretName: inventree-tls
...
